test/tests/stages/16_characters_and_strings/valid/libraries/return_char.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  char
  identifier(return_char)
  (
  void
  )
  {
  return
  const long(5369233654l)
  ;
  }
  signed
  char
  identifier(return_schar)
  (
  void
  )
  {
  return
  const long(5369233654l)
  ;
  }
  unsigned
  char
  identifier(return_uchar)
  (
  void
  )
  {
  return
  const long(5369233654l)
  ;
  }
