test/tests/stages/16_characters_and_strings/invalid_types/negate_char_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(x)
  =
  string literal("foo")
  ;
  return
  -
  identifier(x)
  ;
  }
